testsuite/tests/rename/should_fail/rnfail004.stderr
rnfail004.hs:7:10: error: [GHC-10498]
    Conflicting definitions for ‘a’
  |
7 |     (b,c,a)     = ([],[],d)
  |          ^
  |
6 |     a           = []
  |     ^

rnfail004.hs:8:8: error: [GHC-10498]
    Conflicting definitions for ‘b’
  |
8 |     [d,b,_]     = ([],a,[])
  |        ^
  |
7 |     (b,c,a)     = ([],[],d)
  |      ^

